<resources>
    <string name="app_name">Empleados</string>

    <string name="grl"></string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="titulo">Lista de Empleados</string>

    <string name="example_nombre">Teresa</string>
    <string name="example_apellidoP">Soto</string>
    <string name="example_apellidoM">Ortega</string>
    <string name="example_noNomina">123456789</string>

    <string name="nombre">Nombre</string>
    <string name="apellidoP">Apellido Paterno</string>
    <string name="apellidoM">Apellido Materno</string>
    <string name="noNomina">Número Nómina</string>
    <string name="telefono">Teléfono</string>
    <string name="area">Área</string>
    <string name="infoPersonal">Información Personal</string>
    <string name="infoLaboral">Información Laboral</string>
    <string name="fechaNac">Fecha Nacimiento</string>
    <string name="correo">Correo</string>
    <string name="calleYNo">Calle y Número</string>
    <string name="colonia">Colonia</string>
    <string name="ciudad">Ciudad</string>
    <string name="estado">Estado</string>
    <string name="estadoCivil">Estado Civil</string>
    <string name="enfermedades">Enfermedades Crónicas</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="puesto">Puesto</string>
    <string name="rfc">RFC</string>
    <string name="curp">CURP</string>
    <string name="nss">Número Seguro Social</string>
    <string name="contactoSOS">Contacto SOS</string>
    <string name="escolaridad">Escolaridad</string>
    <string name="status">Status</string>
    <string name="datos">Datos Empleado</string>
    <string name="guardarDatos">Guardar Datos Empleado</string>
    <string name="editarInfo">Editar Información</string>
    <string name="regresar">Regresar</string>
</resources>
