<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nombre_rv"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/example_nombre"
            android:textSize="20sp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_apellidoP_rv"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/example_apellidoP"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_apellidoM_rv"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/example_apellidoM"
            android:textSize="20sp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_noNomina_rv"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/example_noNomina"
            android:textSize="20sp"
            android:textAlignment="center"/>

</LinearLayout>