<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnImagen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    android:onClick="cargarImagen"
                    android:src="@drawable/usuario" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_nombre_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/nombre"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_nombre_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/grl"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_apellidoP_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/apellidoP"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_apellidoP_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/grl"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_apellidoM_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/apellidoM"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_apellidoM_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/grl"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_noNomina_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/noNomina"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_noNomina_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/grl"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_telefono_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/telefono"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_telefono_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/grl"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_area_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/area"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_area_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/grl"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="editar"
                    android:text="@string/editarInfo"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPersonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="personal"
                    android:text="@string/infoPersonal"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLaboral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="laboral"
                    android:text="@string/infoLaboral"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>