<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tituloPersonal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/infoPersonal"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_nombre_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/nombre"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_nombre_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_apellidoP_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/apellidoP"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_apellidoP_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_apellidoM_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/apellidoM"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_apellidoM_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_telefono_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/telefono"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_telefono_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_fechaNac_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/fechaNac"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_fechaNac_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_correo_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/correo"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_correo_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_calleYNo_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/calleYNo"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_calleYNo_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_colonia_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/colonia"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_colonia_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_ciudad_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/ciudad"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_ciudad_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_estado_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/estado"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_estado_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_estadoCivil_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/estadoCivil"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_estadoCivil_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_enfermedades_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/enfermedades"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_enfermedades_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_etiqueta_nacionalidad_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/nacionalidad"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/et_nacionalidad_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/grl" />
            </LinearLayout>

            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardarPersonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="guardarPersonal"
                    android:text="@string/regresar"/>
            </RelativeLayout>-->

        </LinearLayout>

    </ScrollView>

</LinearLayout>